--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -2,7 +2,7 @@
   <div class="col-md-6">
     <h3>Day 1</h3>
     <table class="table table-striped">
-      <tr> <td>Before</td> <td><a href="">Pre-workshop survey</a> </td> </tr>
+      <tr> <td>Before</td> <td><a href="https://www.surveymonkey.com/r/8CZHFDF">Pre-workshop survey</a> </td> </tr>
       <tr> <td>09:00</td>  <td>Welcome and Introductions</td> </tr>
       <tr> <td>09:15</td>  <td><a href="https://bioconductor.github.io/BiocWorkshops/r-and-bioconductor-for-everyone-an-introduction.html#introduction-to-bioconductor">Introduction to Bioconductor</a></td> </tr>
       <tr> <td>10:15</td>  <td><a href="https://bioconductor.github.io/BiocWorkshops/rna-seq-data-analysis-with-deseq2.html#workshop-goals-and-objectives-5">RNA-seq data analysis with DESeq2</a></td> </tr>
@@ -14,7 +14,7 @@
       <tr> <td>15:00</td>  <td><a href="https://bioconductor.github.io/BiocWorkshops/introduction-to-bioconductor-annotation-resources.html#annotation-workshop">Introduction to Bioconductor annotation</a></td> </tr>
       <tr> <td>15:45</td>  <td><a href="https://bioconductor.github.io/BiocWorkshops/public-data-resources-and-bioconductor.html#overview-1">Public data resources and Bioconductor</a></td> </tr>
       <tr> <td>16:45</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>END</td>  <td><a href="">Post-workshop survey</a> </td> </tr>
+      <tr> <td>END</td>  <td><a href="https://www.surveymonkey.com/r/8JN5DK9">Post-workshop survey</a> </td> </tr>
     </table>
   </div>
 </div>
